# aoc2020

./: .gitignore  .gitmodules  README.md
day01/: README.md  main  main.cpp  valgrind-out.txt
day02/: CMakeLists.txt  main.cpp  tests.cpp
day02/lib/: CMakeLists.txt  pwrecord.cpp  pwrecord.hpp  tests.cpp
day03/: CMakeLists.txt  main.cpp
day03/lib/: CMakeLists.txt  map.cpp  map.hpp  tests.cpp
day04/: CMakeLists.txt  main.cpp
day04/lib/: CMakeLists.txt  passport.cpp  passport.hpp  passport_tests.cpp
day05/: CMakeLists.txt  main.cpp
day05/lib/: CMakeLists.txt  binary.cpp  binary.hpp  binary_tests.cpp
day06/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt  main.cpp
day07/lib/: CMakeLists.txt  bag.cpp  bag_test.cpp  bag_tests.cpp
lib/: CMakeLists.txt
lib/aoc/: CMakeLists.txt  customs.cpp  customs.hpp  tests.cpp
lib/graph/: CMakeLists.txt  graph.cpp  graph.hpp  graph_tests.cpp  tests.cpp
lib/readinput/: CMakeLists.txt  readinput.cpp  readinput.hpp  tests.cpp
lib/readinput/testdata/: skip_lines.txt
tests_example/: CMakeLists.txt  main.cpp  tests.cpp
